--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -6,8 +6,17 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Weibo Login Plugin</title>
+        <script src="js/cordova-2.5.0.js"></script>
+        <script src="js/jquery-1.10.1.min.js"></script>
+        <script src="js/weibo.js"></script>
+        <script>
+        	function doLogin(){
+        		weiboLogin("937853576","http://www.my84.cn");
+        	}
+        	
+        </script>
     </head>
     <body>
-        <input type="button" value="Weibo Login"/>
+        <input type="button" value="Weibo Login" onclick="doLogin()"/>
     </body>
 </html>
