--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -7,16 +7,14 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Weibo Login Plugin</title>
         <script src="js/cordova-2.5.0.js"></script>
-        <script src="js/jquery-1.10.1.min.js"></script>
         <script src="js/weibo.js"></script>
         <script>
         	function doLogin(){
         		weiboLogin({
-        			appKey:"",
-					appSecret: '',
-					redirectUrl: ""
+        			appKey:"937853576",
+					redirectUrl: "http://www.my84.cn"
 				}, function(data){
-					alert(data);
+					alert(JSON.stringify(data));
 				}, function(err){
 					alert(err);
 				});
